--- a/index.html
+++ b/index.html
@@ -1,121 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>360 Panorama Viewer</title>
-<link rel="stylesheet" href="https://unpkg.com/photo-sphere-viewer@5/dist/photo-sphere-viewer.css">
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
-  }
+  <meta charset="UTF-8">
+  <title>360° Panorama - Half Moon Bay</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Saira', sans-serif;
+      overflow: hidden;
+      position: relative;
+    }
 
-  #viewer {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+    /* Panorama container */
+    #panorama {
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      z-index: 0;
+    }
 
-  #messageOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.7);
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-    padding: 20px;
-    cursor: pointer;
-    z-index: 9999;
-    transition: opacity 0.3s ease;
-  }
+    /* Frosted glass bar at bottom with centered text */
+    #license-bar {
+      position: fixed;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 90%;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      color: #fff;
+      padding: 10px 20px;
+      font-size: 14px;
+      z-index: 10;
+      overflow-y: auto;
+      text-align: center;
+      white-space: pre-wrap;
+    }
 
-  #messageOverlay.hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
+    /* Centered overlay for controls */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.4); /* darken background */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 20;
+      cursor: pointer; /* allow dismiss by clicking anywhere */
+    }
 
-  #licenseText {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    max-width: 80%;
-    max-height: 30%;
-    overflow-y: auto;
-    background: rgba(255,255,255,0.9);
-    padding: 10px;
-    font-size: 0.9em;
-    white-space: pre-wrap;
-    text-align: center;
-    z-index: 1000;
-  }
-</style>
+    #overlay-content {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      padding: 40px 50px;
+      border-radius: 20px;
+      color: #fff;
+      max-width: 500px;
+      text-align: center;
+      font-size: 1.5em; /* bigger message */
+      pointer-events: auto; /* allow clicks inside the box if needed */
+    }
+
+    #overlay-content button {
+      margin-top: 15px;
+      background: rgba(255, 255, 255, 0.3);
+      border: none;
+      padding: 10px 20px;
+      border-radius: 12px;
+      color: #fff;
+      font-family: 'Saira', sans-serif;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    #overlay-content button:hover {
+      background: rgba(255, 255, 255, 0.5);
+    }
+  </style>
 </head>
 <body>
 
-<div id="viewer"></div>
+  <!-- Panorama container -->
+  <div id="panorama"></div>
 
-<div id="messageOverlay">
-  Click anywhere to continue
-</div>
+  <!-- Frosted glass overlay with controls -->
+  <div id="overlay">
+    <div id="overlay-content">
+      <h2>360° Panorama Controls</h2>
+      <p>
+        Click and drag to look around.<br>
+        Scroll to zoom in/out.<br>
+        Use fullscreen button for best experience.
+      </p>
+      <button id="dismiss-btn">Or click anywhere to dismiss</button>
+    </div>
+  </div>
 
-<div id="licenseText">
-  Loading license...
-</div>
+  <!-- Bottom frosted glass license bar -->
+  <div id="license-bar">Loading license...</div>
 
-<script src="https://unpkg.com/three@0.155.0/build/three.min.js"></script>
-<script src="https://unpkg.com/photo-sphere-viewer@5/dist/photo-sphere-viewer.js"></script>
-<script>
-  // Initialize Photo Sphere Viewer
-  const viewer = new PhotoSphereViewer.Viewer({
-    container: document.getElementById('viewer'),
-    panorama: 'your-360-image.jpg', // replace with your image
-    navbar: ['zoom', 'fullscreen'],
-    defaultLat: 0,
-    defaultLong: 0,
-    mousewheel: true,
-    autorotateDelay: 5000, // start auto-rotation after 5s
-    autorotateSpeed: '0.5rpm'
-  });
-
-  // Overlay dismiss
-  const overlay = document.getElementById('messageOverlay');
-  overlay.addEventListener('click', () => {
-    overlay.classList.add('hidden');
-  });
-
-  // Load LICENSE text dynamically
-  fetch('LICENSE')
-    .then(response => response.text())
-    .then(text => {
-      document.getElementById('licenseText').textContent = text;
-    })
-    .catch(() => {
-      document.getElementById('licenseText').textContent = "Failed to load LICENSE.";
+  <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+  <script>
+    // Initialize panorama
+    const viewer = pannellum.viewer('panorama', {
+      "type": "equirectangular",
+      "panorama": "https://i.imgur.com/FYdmUI3.jpeg",
+      "autoLoad": true,
+      "compass": false,
+      "showZoomCtrl": true,
+      "showFullscreenCtrl": true,
+      "hfov": 100
     });
 
-  // Example hotspot placement (bottom of the sphere)
-  viewer.addMarker({
-    id: 'manhattanBeach',
-    longitude: 0,        // adjust to proper coords
-    latitude: -Math.PI/2, // bottom of sphere
-    tooltip: 'Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area. The Ritz-Carlton can be seen on the distant cliffs. The coastal shores are lined with miles of golf courses.',
-    image: 'https://upload.wikimedia.org/wikipedia/commons/3/3c/Info_icon.svg', // example icon
-    width: 32,
-    height: 32
-  });
-</script>
+    // Dismiss overlay by clicking anywhere
+    const overlay = document.getElementById('overlay');
+    overlay.addEventListener('click', () => {
+      overlay.style.display = 'none';
+    });
+
+    // Also dismiss overlay if the button is clicked
+    document.getElementById('dismiss-btn').addEventListener('click', () => {
+      overlay.style.display = 'none';
+    });
+
+    // Load LICENSE text dynamically
+    fetch('LICENSE')
+      .then(response => {
+        if (!response.ok) throw new Error('Could not load LICENSE file');
+        return response.text();
+      })
+      .then(text => {
+        document.getElementById('license-bar').textContent = text;
+      })
+      .catch(err => {
+        document.getElementById('license-bar').textContent = 'LICENSE file not found.';
+        console.error(err);
+      });
+  </script>
 
 </body>
 </html>
