--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       white-space: pre-wrap;
     }
 
-    /* Centered overlay for controls */
+    /* Centered overlay for instructions */
     #overlay {
       position: fixed;
       top: 0;
@@ -63,23 +63,29 @@
       max-width: 500px;
       text-align: center;
       font-size: 1.5em; /* bigger message */
-      pointer-events: auto; /* allow clicks inside the box if needed */
+      pointer-events: auto;
     }
 
-    #overlay-content button {
-      margin-top: 15px;
-      background: rgba(255, 255, 255, 0.3);
-      border: none;
-      padding: 10px 20px;
-      border-radius: 12px;
+    #overlay-content a {
       color: #fff;
-      font-family: 'Saira', sans-serif;
-      cursor: pointer;
-      font-size: 1em;
+      text-decoration: underline;
     }
 
-    #overlay-content button:hover {
-      background: rgba(255, 255, 255, 0.5);
+    /* Small frosted glass hotspot panel */
+    #hotspot-panel {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      padding: 15px 20px;
+      border-radius: 15px;
+      color: #fff;
+      font-size: 1em;
+      text-align: center;
+      max-width: 80%;
+      z-index: 15;
     }
   </style>
 </head>
@@ -88,17 +94,28 @@
   <!-- Panorama container -->
   <div id="panorama"></div>
 
-  <!-- Frosted glass overlay with controls -->
+  <!-- Overlay with instructions -->
   <div id="overlay">
     <div id="overlay-content">
-      <h2>360° Panorama Controls</h2>
+      <p>
+        Hi, I'm Lex, a nobody magician who enjoys travel, tech and research.<br>
+        These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.<br>
+        If you would like to learn more about me <a href="https://linktr.ee/lexofdystopia" target="_blank">here</a>.
+      </p>
       <p>
         Click and drag to look around.<br>
         Scroll to zoom in/out.<br>
         Use fullscreen button for best experience.
       </p>
-      <button id="dismiss-btn">Or click anywhere to dismiss</button>
+      <p style="font-weight: bold; margin-top: 20px;">Click Anywhere to Dismiss this Message</p>
     </div>
+  </div>
+
+  <!-- Small centered hotspot panel -->
+  <div id="hotspot-panel">
+    Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
+    The Ritz-Carlton can be seen on the distant cliffs.<br>
+    The coastal shores are lined with miles of golf courses.
   </div>
 
   <!-- Bottom frosted glass license bar -->
@@ -112,7 +129,7 @@
       "panorama": "https://i.imgur.com/FYdmUI3.jpeg",
       "autoLoad": true,
       "compass": false,
-      "showZoomCtrl": true,
+      "showZoomCtrl": false,  // Removed zoom buttons
       "showFullscreenCtrl": true,
       "hfov": 100
     });
@@ -120,11 +137,6 @@
     // Dismiss overlay by clicking anywhere
     const overlay = document.getElementById('overlay');
     overlay.addEventListener('click', () => {
-      overlay.style.display = 'none';
-    });
-
-    // Also dismiss overlay if the button is clicked
-    document.getElementById('dismiss-btn').addEventListener('click', () => {
       overlay.style.display = 'none';
     });
 
