--- a/index.html
+++ b/index.html
@@ -1,175 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>360° Panorama - Half Moon Bay</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Saira', sans-serif;
-      overflow: hidden;
-      position: relative;
-    }
+<meta charset="UTF-8">
+<title>360° Panorama - Half Moon Bay</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  /* Global unselectable text */
+  body, #overlay, #overlay-content, #hotspot-panel, #license-bar {
+    user-select: none;
+  }
 
-    #panorama {
-      width: 100vw;
-      height: 100vh;
-      position: relative;
-      z-index: 0;
-    }
+  body {
+    margin: 0;
+    font-family: 'Saira', sans-serif;
+    overflow: hidden;
+    position: relative;
+  }
 
-    #license-bar {
-      position: fixed;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      max-width: 90%;
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(10px);
-      color: #fff;
-      padding: 10px 20px;
-      font-size: 14px;
-      z-index: 10;
-      overflow-y: auto;
-      text-align: center;
-      white-space: pre-wrap;
-    }
+  #panorama {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    z-index: 0;
+  }
 
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.4);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 20;
-      cursor: pointer;
-    }
+  /* Frosted glass bottom bar */
+  #license-bar {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 90%;
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px);
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 14px;
+    z-index: 10;
+    overflow-y: auto;
+    text-align: center;
+    white-space: pre-wrap;
+    border-radius: 10px;
+  }
 
-    #overlay-content {
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(10px);
-      padding: 40px 50px;
-      border-radius: 20px;
-      color: #fff;
-      max-width: 600px;
-      text-align: center;
-      font-size: 1.5em;
-      pointer-events: auto;
-      line-height: 1.4em;
-    }
+  /* Overlay instructions */
+  #overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.35);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 20;
+    cursor: pointer;
+  }
 
-    #overlay-content a {
-      color: #fff;
-      text-decoration: underline;
-    }
+  #overlay-content {
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px);
+    padding: 40px 50px;
+    border-radius: 20px;
+    color: #fff;
+    max-width: 600px;
+    text-align: center;
+    font-size: 1.5em;
+    pointer-events: auto;
+    line-height: 1.4em;
+  }
 
-    /* Small frosted glass hotspot panel */
-    #hotspot-panel {
-      position: fixed;
-      top: 20px; /* align to top */
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(10px);
-      padding: 15px 20px;
-      border-radius: 15px;
-      color: #fff;
-      font-size: 1em;
-      text-align: center;
-      max-width: 80%;
-      z-index: 15;
-    }
+  #overlay-content a {
+    color: #fff;
+    text-decoration: underline;
+    position: relative;
+  }
 
-    /* Pulse animation class */
-    .pulse {
-      animation: pulseHighlight 2s ease-in-out;
-    }
+  /* Tooltip preview for 'here' */
+  #overlay-content a span.tooltip {
+    visibility: hidden;
+    width: 250px;
+    background: rgba(0,0,0,0.8);
+    color: #fff;
+    text-align: left;
+    padding: 10px;
+    border-radius: 8px;
+    position: absolute;
+    bottom: 125%; 
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 30;
+    font-size: 0.8em;
+    line-height: 1.2em;
+  }
 
-    @keyframes pulseHighlight {
-      0%   { background: rgba(0,0,0,0.5); }
-      50%  { background: rgba(0,0,0,0.7); } /* brighter */
-      100% { background: rgba(0,0,0,0.5); }
-    }
-  </style>
+  #overlay-content a:hover span.tooltip {
+    visibility: visible;
+  }
+
+  /* Small frosted glass hotspot panel */
+  #hotspot-panel {
+    position: fixed;
+    top: 20px; 
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(10px);
+    padding: 15px 20px;
+    border-radius: 15px;
+    color: #fff;
+    font-size: 1em;
+    text-align: center;
+    max-width: 80%;
+    z-index: 15;
+  }
+
+  /* Pulse animation */
+  .pulse {
+    animation: pulseHighlight 2s ease-in-out;
+  }
+
+  @keyframes pulseHighlight {
+    0%   { background: rgba(0,0,0,0.7); }
+    50%  { background: rgba(0,0,0,0.9); } 
+    100% { background: rgba(0,0,0,0.7); }
+  }
+
+  /* Instructions bullets */
+  #instructions-line {
+    text-decoration: underline;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+
+  #instructions-list {
+    text-align: left;
+    margin: 0 auto;
+    max-width: 400px;
+    line-height: 1.6em;
+  }
+</style>
 </head>
 <body>
 
-  <div id="panorama"></div>
+<div id="panorama"></div>
 
-  <!-- Overlay with instructions -->
-  <div id="overlay">
-    <div id="overlay-content">
-      <p>
-        Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.
-      </p>
-      <p>
-        If you would like to learn more about me <a href="https://linktr.ee/lexofdystopia" target="_blank" onclick="event.stopPropagation()">here</a>.
-      </p>
-      <p>
-        Click and drag to look around. Scroll to zoom in/out. Use fullscreen button for best experience.
-      </p>
-      <p style="font-weight: bold; margin-top: 20px;">Click Anywhere to Dismiss this Message</p>
+<!-- Overlay with instructions -->
+<div id="overlay">
+  <div id="overlay-content">
+    <p>
+      Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.
+    </p>
+    <p>
+      If you would like to see my other work click <a href="https://linktr.ee/lexofdystopia" target="_blank" onclick="event.stopPropagation()">here
+        <span class="tooltip">Preview of my work: images, projects, and links to my creative portfolio.</span>
+      </a>.
+    </p>
+    <div id="instructions-line">Instructions</div>
+    <div id="instructions-list">
+      <p>• Click and drag to look around.</p>
+      <p>• Scroll to zoom in/out.</p>
+      <p>• Use fullscreen button for best experience.</p>
     </div>
+    <p style="font-weight: bold; margin-top: 20px;">Click Anywhere to Dismiss this Message</p>
   </div>
+</div>
 
-  <!-- Small frosted glass hotspot panel -->
-  <div id="hotspot-panel">
-    Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
-    The Ritz-Carlton can be seen on the distant cliffs.<br>
-    The coastal shores are lined with miles of golf courses.
-  </div>
+<!-- Small frosted glass hotspot panel -->
+<div id="hotspot-panel">
+  Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
+  The Ritz-Carlton can be seen on the distant cliffs.<br>
+  The coastal shores are lined with miles of golf courses.
+</div>
 
-  <div id="license-bar">Loading license...</div>
+<!-- Bottom frosted glass license bar -->
+<div id="license-bar">Loading license...</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
-  <script>
-    // Initialize panorama
-    const viewer = pannellum.viewer('panorama', {
-      "type": "equirectangular",
-      "panorama": "https://i.imgur.com/FYdmUI3.jpeg",
-      "autoLoad": true,
-      "compass": false,
-      "showZoomCtrl": false,
-      "showFullscreenCtrl": true,
-      "hfov": 100
+<script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+<script>
+  const viewer = pannellum.viewer('panorama', {
+    "type": "equirectangular",
+    "panorama": "https://i.imgur.com/FYdmUI3.jpeg",
+    "autoLoad": true,
+    "compass": false,
+    "showZoomCtrl": false,
+    "showFullscreenCtrl": true,
+    "hfov": 100
+  });
+
+  const overlay = document.getElementById('overlay');
+  const hotspotPanel = document.getElementById('hotspot-panel');
+
+  overlay.addEventListener('click', () => {
+    overlay.style.display = 'none';
+
+    hotspotPanel.classList.add('pulse');
+    setTimeout(() => {
+      hotspotPanel.classList.remove('pulse');
+    }, 2000);
+  });
+
+  fetch('LICENSE')
+    .then(response => {
+      if (!response.ok) throw new Error('Could not load LICENSE file');
+      return response.text();
+    })
+    .then(text => {
+      document.getElementById('license-bar').textContent = text;
+    })
+    .catch(err => {
+      document.getElementById('license-bar').textContent = 'LICENSE file not found.';
+      console.error(err);
     });
-
-    const overlay = document.getElementById('overlay');
-    const hotspotPanel = document.getElementById('hotspot-panel');
-
-    // Dismiss overlay by clicking anywhere
-    overlay.addEventListener('click', () => {
-      overlay.style.display = 'none';
-
-      // Trigger pulse on hotspot panel after overlay dismissed
-      hotspotPanel.classList.add('pulse');
-
-      // Remove pulse class after animation completes so it can re-trigger if needed
-      setTimeout(() => {
-        hotspotPanel.classList.remove('pulse');
-      }, 2000);
-    });
-
-    // Load LICENSE text dynamically
-    fetch('LICENSE')
-      .then(response => {
-        if (!response.ok) throw new Error('Could not load LICENSE file');
-        return response.text();
-      })
-      .then(text => {
-        document.getElementById('license-bar').textContent = text;
-      })
-      .catch(err => {
-        document.getElementById('license-bar').textContent = 'LICENSE file not found.';
-        console.error(err);
-      });
-  </script>
+</script>
 
 </body>
 </html>
