--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
-  /* Global unselectable text */
   body, #overlay, #overlay-content, #hotspot-panel, #license-bar {
     user-select: none;
   }
@@ -25,14 +24,13 @@
     z-index: 0;
   }
 
-  /* Frosted glass bottom bar */
   #license-bar {
     position: fixed;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     max-width: 90%;
-    background: rgba(255, 255, 255, 0.45);
+    background: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(10px);
     color: #fff;
     padding: 10px 20px;
@@ -44,7 +42,6 @@
     border-radius: 10px;
   }
 
-  /* Overlay instructions */
   #overlay {
     position: fixed;
     top: 0;
@@ -84,7 +81,7 @@
     width: 250px;
     background: rgba(0,0,0,0.8);
     color: #fff;
-    text-align: left;
+    text-align: center;
     padding: 10px;
     border-radius: 8px;
     position: absolute;
@@ -100,14 +97,13 @@
     visibility: visible;
   }
 
-  /* Small frosted glass hotspot panel */
   #hotspot-panel {
-    display: none; /* hidden initially */
+    display: none;
     position: fixed;
     top: 20px; 
     left: 50%;
     transform: translateX(-50%);
-    background: rgba(0, 0, 0, 0.45);
+    background: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(10px);
     padding: 15px 20px;
     border-radius: 15px;
@@ -118,18 +114,16 @@
     z-index: 15;
   }
 
-  /* Pulse to white animation */
   @keyframes pulseWhite {
-    0%   { background: rgba(0,0,0,0.45); }
+    0%   { background: rgba(0,0,0,0.6); }
     50%  { background: rgba(255,255,255,0.9); } 
-    100% { background: rgba(0,0,0,0.45); }
+    100% { background: rgba(0,0,0,0.6); }
   }
 
   .pulse-white {
     animation: pulseWhite 2s ease-in-out;
   }
 
-  /* Instructions bullets */
   #instructions-line {
     text-decoration: underline;
     margin-bottom: 10px;
@@ -148,7 +142,6 @@
 
 <div id="panorama"></div>
 
-<!-- Overlay with instructions -->
 <div id="overlay">
   <div id="overlay-content">
     <p>
@@ -156,31 +149,37 @@
     </p>
     <p>
       If you would like to see my other work click <a href="https://linktr.ee/lexofdystopia" target="_blank" onclick="event.stopPropagation()">
-        here
-        <span class="tooltip">
-          <img src="https://i.imgur.com/eKxOrcZ.jpeg" width="250" style="border-radius:8px;"><br>
-          https://linktr.ee/lexofdystopia
+        here<span class="tooltip">
+          <div style="text-align:center;">
+            <img src="https://i.imgur.com/eKxOrcZ.jpeg" width="250" style="border-radius:8px;"><br>
+            https://linktr.ee/lexofdystopia
+          </div>
         </span>
       </a>.
     </p>
+
+    <p style="font-weight: bold; margin-top: 20px;">Click Anywhere to Dismiss this Message</p>
+
+    <br><br>
+
     <div id="instructions-line">Instructions</div>
+
+    <br><br>
+
     <div id="instructions-list">
       <p>• Click and drag to look around.</p>
       <p>• Scroll to zoom in/out.</p>
       <p>• Use fullscreen button for best experience.</p>
     </div>
-    <p style="font-weight: bold; margin-top: 20px;">Click Anywhere to Dismiss this Message</p>
   </div>
 </div>
 
-<!-- Small frosted glass hotspot panel -->
 <div id="hotspot-panel">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
-<!-- Bottom frosted glass license bar -->
 <div id="license-bar">Loading license...</div>
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
@@ -200,7 +199,6 @@
 
   overlay.addEventListener('click', () => {
     overlay.style.display = 'none';
-
     hotspotPanel.style.display = 'block';
     hotspotPanel.classList.add('pulse-white');
     setTimeout(() => {
